--- a/umbrello/dialogs/widgetcolorsbase.ui
+++ b/umbrello/dialogs/widgetcolorsbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Widget colors</string>
+        <string>Widget Colors</string>
     </property>
     <vbox>
         <property name="name">
@@ -60,7 +60,7 @@
                                 <cstring>textLabel2</cstring>
                             </property>
                             <property name="text">
-                                <string>Line</string>
+                                <string>Line:</string>
                             </property>
                         </widget>
                         <widget class="KColorButton">
@@ -111,7 +111,7 @@
                                 <cstring>textLabel1</cstring>
                             </property>
                             <property name="text">
-                                <string>Fill</string>
+                                <string>Fill:</string>
                             </property>
                         </widget>
                         <widget class="KColorButton">
@@ -162,7 +162,7 @@
                                 <cstring>m_useDiagramColors</cstring>
                             </property>
                             <property name="text">
-                                <string>use diagram colors</string>
+                                <string>Use diagram colors</string>
                             </property>
                         </widget>
                         <spacer>
@@ -207,6 +207,7 @@
 </widget>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
+    <includehint>qwidget.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
 </includehints>
