Added dialog pages for Classes, Attributes, Properties, Parameters, Templates, Interfaces, Packages etc. The dialog pages for most of Classes, Interfaces and Packages are close to complete. This means the class diagram is getting usable.
The refactoring assistant should be much better now, since you can change props of atts and ops instead of just "moving" them

svn path=/trunk/kdesdk/umbrello/; revision=225499

--- a/umbrello/dialogs/attributepropertiesbase.ui
+++ b/umbrello/dialogs/attributepropertiesbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>314</width>
-            <height>231</height>
+            <width>323</width>
+            <height>226</height>
         </rect>
     </property>
     <property name="caption">
@@ -96,9 +96,9 @@
                 </spacer>
             </grid>
         </widget>
-        <widget class="QGroupBox">
+        <widget class="QButtonGroup">
             <property name="name">
-                <cstring>groupBox3</cstring>
+                <cstring>buttonGroup2</cstring>
             </property>
             <property name="title">
                 <string>Visibility</string>
