--- a/umbrello/dialogs/sellanguagesbase.ui
+++ b/umbrello/dialogs/sellanguagesbase.ui
@@ -66,7 +66,7 @@
                 <string>The following languages were found.
 
 Please select the programming languages that you want
-to install for code ceneration.</string>
+to install for code generation.</string>
             </property>
         </widget>
         <widget class="QListView" row="1" column="0" rowspan="1" colspan="3">
