fix wrong header line for kfontdialog.h.. shouldnt have path
svn path=/trunk/kdesdk/umbrello/; revision=251869

--- a/umbrello/dialogs/codevieweroptionsbase.ui
+++ b/umbrello/dialogs/codevieweroptionsbase.ui
@@ -345,7 +345,7 @@
 <customwidgets>
     <customwidget>
         <class>KFontChooser</class>
-        <header location="global">/usr/include/kde/kfontdialog.h</header>
+        <header location="global">kfontdialog.h</header>
         <sizehint>
             <width>-1</width>
             <height>-1</height>
