--- a/umbrello/codegenerators/javacodegenerationformbase.ui
+++ b/umbrello/codegenerators/javacodegenerationformbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>JavaCodeGenerationFormBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,8 +9,11 @@
             <x>0</x>
             <y>0</y>
             <width>461</width>
-            <height>443</height>
+            <height>445</height>
         </rect>
+    </property>
+    <property name="caption">
+        <string>Form1</string>
     </property>
     <widget class="QLayoutWidget">
         <property name="name">
@@ -88,7 +91,7 @@
                             <cstring>m_generateConstructors</cstring>
                         </property>
                         <property name="text">
-                            <string>Empty Constructors</string>
+                            <string>Empty constructors</string>
                         </property>
                         <property name="checked">
                             <bool>false</bool>
@@ -99,7 +102,7 @@
                             <cstring>m_generateAccessors</cstring>
                         </property>
                         <property name="text">
-                            <string>Accessor Methods</string>
+                            <string>Accessor methods</string>
                         </property>
                         <property name="checked">
                             <bool>true</bool>
