--- a/umbrello/dialogs/classifieroperationsbase.ui
+++ b/umbrello/dialogs/classifieroperationsbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>ClassifierOperationsBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,11 +9,11 @@
             <x>0</x>
             <y>0</y>
             <width>389</width>
-            <height>374</height>
+            <height>376</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Classifier operations</string>
+        <string>Classifier Operations</string>
     </property>
     <vbox>
         <property name="name">
