--- a/umbrello/dialogs/classtemplatesbase.ui
+++ b/umbrello/dialogs/classtemplatesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>ClassTemplatesBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,12 +8,12 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>368</width>
-            <height>369</height>
+            <width>377</width>
+            <height>371</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Class templates</string>
+        <string>Class Templates</string>
     </property>
     <vbox>
         <property name="name">
