--- a/umbrello/dialogs/interfacepropertiesbase.ui
+++ b/umbrello/dialogs/interfacepropertiesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>InterfacePropertiesBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,12 +8,12 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>338</width>
-            <height>351</height>
+            <width>350</width>
+            <height>353</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Interface properties</string>
+        <string>Interface Properties</string>
     </property>
     <vbox>
         <property name="name">
@@ -61,7 +61,7 @@
                         <cstring>m_nameLabel</cstring>
                     </property>
                     <property name="text">
-                        <string>Interface name</string>
+                        <string>Interface name:</string>
                     </property>
                 </widget>
                 <widget class="QLineEdit" row="0" column="1">
