--- a/umbrello/dialogs/packagepropertiesbase.ui
+++ b/umbrello/dialogs/packagepropertiesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>PackagePropertiesBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,12 +8,12 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>338</width>
-            <height>351</height>
+            <width>350</width>
+            <height>353</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Package properties</string>
+        <string>Package Properties</string>
     </property>
     <vbox>
         <property name="name">
