--- a/umbrello/dialogs/parameterpropertiesbase.ui
+++ b/umbrello/dialogs/parameterpropertiesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>ParameterPropertiesBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,11 +9,11 @@
             <x>0</x>
             <y>0</y>
             <width>366</width>
-            <height>292</height>
+            <height>296</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Parameter properties</string>
+        <string>Parameter Properties</string>
     </property>
     <vbox>
         <property name="name">
@@ -24,7 +24,7 @@
                 <cstring>groupBox7</cstring>
             </property>
             <property name="title">
-                <string>Parameter properties</string>
+                <string>Parameter Properties</string>
             </property>
             <grid>
                 <property name="name">
