--- a/umbrello/dialogs/templatepropertiesbase.ui
+++ b/umbrello/dialogs/templatepropertiesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>TemplatePropertiesBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,11 +9,11 @@
             <x>0</x>
             <y>0</y>
             <width>296</width>
-            <height>129</height>
+            <height>131</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Template properties</string>
+        <string>Template Properties</string>
     </property>
     <vbox>
         <property name="name">
@@ -24,7 +24,7 @@
                 <cstring>groupBox3</cstring>
             </property>
             <property name="title">
-                <string>General properties</string>
+                <string>General Properties</string>
             </property>
             <grid>
                 <property name="name">
@@ -48,7 +48,7 @@
                         <cstring>textLabel1</cstring>
                     </property>
                     <property name="text">
-                        <string>Type</string>
+                        <string>Type:</string>
                     </property>
                 </widget>
                 <widget class="QLabel" row="1" column="0">
@@ -56,7 +56,7 @@
                         <cstring>textLabel2</cstring>
                     </property>
                     <property name="text">
-                        <string>Name</string>
+                        <string>Name:</string>
                     </property>
                 </widget>
             </grid>
