--- a/umbrello/dialogs/umlrolepropertiesbase.ui
+++ b/umbrello/dialogs/umlrolepropertiesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>UMLRolePropertiesBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,8 +9,11 @@
             <x>0</x>
             <y>0</y>
             <width>422</width>
-            <height>543</height>
+            <height>545</height>
         </rect>
+    </property>
+    <property name="caption">
+        <string>UMLRolePropertiesBase</string>
     </property>
     <widget class="QLayoutWidget">
         <property name="name">
@@ -56,7 +59,7 @@
                                 <cstring>roleNameLabel</cstring>
                             </property>
                             <property name="text">
-                                <string>Rolename</string>
+                                <string>Rolename:</string>
                             </property>
                         </widget>
                         <widget class="QLineEdit" row="1" column="1">
@@ -74,7 +77,7 @@
                                 <cstring>textLabel2</cstring>
                             </property>
                             <property name="text">
-                                <string>Multiplicity</string>
+                                <string>Multiplicity:</string>
                             </property>
                         </widget>
                     </grid>
