--- a/umbrello/plugins/umlwidgets/dialogs/classdisplayoptionsbase.ui
+++ b/umbrello/plugins/umlwidgets/dialogs/classdisplayoptionsbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>ClassDisplayOptionsBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,12 +8,12 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>340</width>
-            <height>285</height>
+            <width>433</width>
+            <height>287</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Class display options</string>
+        <string>Class Display Options</string>
     </property>
     <vbox>
         <property name="name">
