--- a/umbrello/codegenerators/javacodegenerationformbase.ui
+++ b/umbrello/codegenerators/javacodegenerationformbase.ui
@@ -8,131 +8,196 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>461</width>
-            <height>445</height>
+            <width>469</width>
+            <height>347</height>
         </rect>
     </property>
     <property name="caption">
         <string>Form1</string>
     </property>
-    <widget class="QLayoutWidget">
+    <grid>
         <property name="name">
-            <cstring>layout2</cstring>
+            <cstring>unnamed</cstring>
         </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>20</y>
-                <width>400</width>
-                <height>300</height>
-            </rect>
-        </property>
-        <vbox>
+        <widget class="QLabel" row="0" column="0">
             <property name="name">
-                <cstring>unnamed</cstring>
+                <cstring>textLabel1_2</cstring>
             </property>
-            <widget class="QLabel">
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>5</hsizetype>
+                    <vsizetype>4</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="text">
+                <string>&lt;p align="center"&gt;Java Code Generation&lt;/p&gt;</string>
+            </property>
+        </widget>
+        <widget class="QGroupBox" row="1" column="0">
+            <property name="name">
+                <cstring>groupBox1</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>5</hsizetype>
+                    <vsizetype>4</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="title">
+                <string>Documentation</string>
+            </property>
+            <hbox>
                 <property name="name">
-                    <cstring>textLabel1_2</cstring>
+                    <cstring>unnamed</cstring>
                 </property>
-                <property name="text">
-                    <string>&lt;p align="center"&gt;Java Code Generation&lt;/p&gt;</string>
-                </property>
-            </widget>
-            <widget class="QGroupBox">
-                <property name="name">
-                    <cstring>groupBox1</cstring>
-                </property>
-                <property name="title">
-                    <string>Documentation</string>
-                </property>
-                <hbox>
+                <widget class="QLabel">
                     <property name="name">
-                        <cstring>unnamed</cstring>
+                        <cstring>textLabel1</cstring>
                     </property>
-                    <widget class="QLabel">
-                        <property name="name">
-                            <cstring>textLabel1</cstring>
-                        </property>
+                    <property name="text">
+                        <string>Style:</string>
+                    </property>
+                </widget>
+                <widget class="QComboBox">
+                    <item>
                         <property name="text">
-                            <string>Style:</string>
+                            <string>Slash-Star (/**  */)</string>
                         </property>
-                    </widget>
-                    <widget class="QComboBox">
-                        <item>
-                            <property name="text">
-                                <string>Slash-Star (/**  */)</string>
+                    </item>
+                    <item>
+                        <property name="text">
+                            <string>Slash-Slash (//)</string>
+                        </property>
+                    </item>
+                    <property name="name">
+                        <cstring>m_SelectCommentStyle</cstring>
+                    </property>
+                </widget>
+            </hbox>
+        </widget>
+        <widget class="QGroupBox" row="2" column="0">
+            <property name="name">
+                <cstring>groupBox2</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>5</hsizetype>
+                    <vsizetype>4</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="title">
+                <string>Auto-Generate Methods</string>
+            </property>
+            <grid>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QCheckBox" row="0" column="0">
+                    <property name="name">
+                        <cstring>m_generateConstructors</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Empty constructor methods</string>
+                    </property>
+                    <property name="checked">
+                        <bool>false</bool>
+                    </property>
+                </widget>
+                <widget class="QCheckBox" row="1" column="0">
+                    <property name="name">
+                        <cstring>m_generateAccessors</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Accessor methods</string>
+                    </property>
+                    <property name="checked">
+                        <bool>true</bool>
+                    </property>
+                </widget>
+                <widget class="QLayoutWidget" row="2" column="0">
+                    <property name="name">
+                        <cstring>layout4</cstring>
+                    </property>
+                    <grid>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QComboBox" row="0" column="1">
+                            <item>
+                                <property name="text">
+                                    <string>Public</string>
+                                </property>
+                            </item>
+                            <item>
+                                <property name="text">
+                                    <string>Private</string>
+                                </property>
+                            </item>
+                            <item>
+                                <property name="text">
+                                    <string>Protected</string>
+                                </property>
+                            </item>
+                            <item>
+                                <property name="text">
+                                    <string>From Parent Object</string>
+                                </property>
+                            </item>
+                            <property name="name">
+                                <cstring>m_accessorScopeCB</cstring>
                             </property>
-                        </item>
-                        <item>
-                            <property name="text">
-                                <string>Slash-Slash (//)</string>
+                            <property name="currentItem">
+                                <number>3</number>
                             </property>
-                        </item>
-                        <property name="name">
-                            <cstring>m_SelectCommentStyle</cstring>
-                        </property>
-                    </widget>
-                </hbox>
-            </widget>
-            <widget class="QGroupBox">
+                        </widget>
+                        <widget class="QLabel" row="0" column="0">
+                            <property name="name">
+                                <cstring>textLabel1_3</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Default Accessor Scope:</string>
+                            </property>
+                        </widget>
+                    </grid>
+                </widget>
+            </grid>
+        </widget>
+        <widget class="QGroupBox" row="3" column="0">
+            <property name="name">
+                <cstring>groupBox3</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>5</hsizetype>
+                    <vsizetype>4</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="title">
+                <string>Project Generation</string>
+            </property>
+            <vbox>
                 <property name="name">
-                    <cstring>groupBox2</cstring>
+                    <cstring>unnamed</cstring>
                 </property>
-                <property name="title">
-                    <string>Auto-Generate Methods</string>
-                </property>
-                <vbox>
+                <widget class="QCheckBox">
                     <property name="name">
-                        <cstring>unnamed</cstring>
+                        <cstring>m_makeANTDocumentCheckBox</cstring>
                     </property>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>m_generateConstructors</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Empty constructors</string>
-                        </property>
-                        <property name="checked">
-                            <bool>false</bool>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>m_generateAccessors</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Accessor methods</string>
-                        </property>
-                        <property name="checked">
-                            <bool>true</bool>
-                        </property>
-                    </widget>
-                </vbox>
-            </widget>
-            <widget class="QGroupBox">
-                <property name="name">
-                    <cstring>groupBox3</cstring>
-                </property>
-                <property name="title">
-                    <string>Project Generation</string>
-                </property>
-                <vbox>
-                    <property name="name">
-                        <cstring>unnamed</cstring>
+                    <property name="text">
+                        <string>Create ANT build document</string>
                     </property>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>m_makeANTDocumentCheckBox</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Create ANT build document</string>
-                        </property>
-                    </widget>
-                </vbox>
-            </widget>
-        </vbox>
-    </widget>
+                </widget>
+            </vbox>
+        </widget>
+    </grid>
 </widget>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
