bug fix: correctly implement user ability to change string/vector class characteristics for C++ code generation
svn path=/trunk/kdesdk/umbrello/; revision=268475

--- a/umbrello/codegenerators/cppcodegenerationformbase.ui
+++ b/umbrello/codegenerators/cppcodegenerationformbase.ui
@@ -517,6 +517,23 @@
         </widget>
     </widget>
 </widget>
+<connections>
+    <connection>
+        <sender>m_browseListButton</sender>
+        <signal>clicked()</signal>
+        <receiver>CPPCodeGenerationFormBase</receiver>
+        <slot>browseClicked()</slot>
+    </connection>
+    <connection>
+        <sender>m_browseStringButton</sender>
+        <signal>clicked()</signal>
+        <receiver>CPPCodeGenerationFormBase</receiver>
+        <slot>browseClicked()</slot>
+    </connection>
+</connections>
+<slots>
+    <slot>browseClicked()</slot>
+</slots>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>kcombobox.h</includehint>
